# libcl

./: CMakeLists.txt  LICENSE  Makefile  README.md  assembly.c  build.c  cl_primer.c  cl_primer.h  cl_structs.h  clean_up.c  execute_kernel.c  init_cl.c  kernel.cl  main.c  opencl_calculation.c
kernel_includes/: kernel_structs.h
kernels/: kernel.cl
libcl/: Makefile
libcl/includes/: cl_user_structs.h  libcl.h
libcl/srcs/: assembly.c  build.c  clean_up.c  execute_kernel.c  get_dev_info.c  init_cl.c  libcl.c
opencl_primer/: Makefile
opencl_primer/includes/: cl_primer.h  cl_user_structs.h
opencl_primer/srcs/: assembly.c  build.c  cl_primer.c  clean_up.c  execute_kernel.c  get_dev_info.c  init_cl.c
